--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-// Thumbnail data base files
+# База данных эскизов
 Thumbs.db
 
-// Backup files
+# Бэкапы
 *.bak
 
-// Directories
+# Папки с файлами
 /!p
+
+# Конвертированные текстуры
+/actors/**/*.inc.c
+/levels/**/*.inc.c
+/textures/**/*.inc.c
